2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/tty_drv.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-07-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/irq/irq.h, shared/irq/irq.c, shared/irq/irq_init.c: Converted
	to use generic interrupt support.
	* shared/irq/irq-config.h: New file.

2009-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/comm/i386-stub-glue.c, shared/comm/uart.c, shared/irq/irq.c,
	shared/pci/pcibios.c: Fixed warnings.

2009-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1385/cpukit
	* shared/irq/irq_asm.S: When the type rtems_boolean was switched to the
	C99 bool, the size changed from 4 bytes to 1 byte. The interrupt
	dispatching code accesses two boolean variables for scheduling
	purposes and the assembly implementations of this code did not get
	updated.

2009-02-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq.c, shared/irq/irq.h, shared/irq/irq_asm.S: Add shared
	interrupt support to i386.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq.h: Fix spelling error.

2008-09-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub.c: Include stdbool.h.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub.c, shared/irq/irq.c: Misc. "bool" changes.

2008-08-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/irq/irq_init.c: Reverse previous incorrect changes. Correct
	warnings and ensure BSP still works.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/i386-stub.c, shared/irq/irq_init.c: Fix warnings for
	prototypes, types, etc.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/comm/i386-stub-glue.c, shared/comm/i386-stub.c:
	Add missing prototypes.
	* shared/irq/irq_init.c: Add missing prototypes.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/comm/tty_drv.c: Eliminate copies of switches to convert